%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!1107 &-8106394733870113903
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: -2186859016606710971}
    m_Position: {x: -320, y: 100, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 656611719381085117}
    m_Position: {x: 100, y: -40, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 5889654199905911718}
    m_Position: {x: 100, y: 130, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -817509112962169832}
    m_Position: {x: 100, y: 40, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 5790509396359310567}
    m_Position: {x: 100, y: 220, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -1921240746343893756}
    m_Position: {x: 100, y: 300, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 7280760791079481889}
    m_Position: {x: 100, y: 390, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: -120, y: -180, z: 0}
  m_EntryPosition: {x: -570, y: 110, z: 0}
  m_ExitPosition: {x: 270, y: -150, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: -2186859016606710971}
--- !u!1101 &-7751348064235546682
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInvincibility
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isMelee
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isRangeAttack
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isSpecialLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isArmorBuff
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -2186859016606710971}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.625
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-7163001635586709766
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isRangeAttack
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isMelee
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isSpecialLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isArmorBuff
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 5889654199905911718}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.57142854
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-6005822181978789717
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isSpecialLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isMelee
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isRangeAttack
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isArmorBuff
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 5790509396359310567}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.57142854
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-3749393215614279115
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isInvincibility
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isMelee
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isRangeAttack
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isSpecialLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isArmorBuff
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 7280760791079481889}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.57142854
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-3320824358877882419
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isMelee
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isRangeAttack
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isSpecialLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isArmorBuff
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 656611719381085117}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.57142854
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-2681963269455722885
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInvincibility
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isMelee
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isRangeAttack
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isSpecialLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isArmorBuff
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -2186859016606710971}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.625
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-2574338757413254264
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInvincibility
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isMelee
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isRangeAttack
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isSpecialLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isArmorBuff
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -2186859016606710971}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-2186859016606710971
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -3320824358877882419}
  - {fileID: -7163001635586709766}
  - {fileID: -1626228949230861450}
  - {fileID: -6005822181978789717}
  - {fileID: 4532501854547452495}
  - {fileID: -3749393215614279115}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 52075bdef33659a408b7460d04c27eb3, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &-1921240746343893756
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: ArmorBuff
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 6710355430517019312}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: aa3634fcef171514fb7c15c3a2fa7c96, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-1626228949230861450
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isMelee
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isRangeAttack
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isSpecialLazerFire
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -817509112962169832}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.57142854
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-817509112962169832
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: LazerCast
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -2681963269455722885}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 8d19f644642105a41a0a9c57c5a21992, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-136282015277340100
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInvincibility
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isMelee
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isRangeAttack
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isSpecialLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isArmorBuff
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -2186859016606710971}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.625
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: GolemController
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: isMelee
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  - m_Name: isRangeAttack
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  - m_Name: isLazerFire
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  - m_Name: isSpecialLazerFire
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  - m_Name: isArmorBuff
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  - m_Name: isInvincibility
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: -8106394733870113903}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1102 &656611719381085117
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Melee
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -2574338757413254264}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 2ce5b383321ffce40941d040a50d1bb8, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &2407164190980322354
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInvincibility
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isMelee
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isRangeAttack
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isSpecialLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isArmorBuff
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -2186859016606710971}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.6666666
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &4532501854547452495
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isArmorBuff
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isMelee
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isRangeAttack
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isSpecialLazerFire
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -1921240746343893756}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.57142854
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &5790509396359310567
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: ReadySpecialLazer
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -136282015277340100}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: aa4fa4683e863454abc25f6fd413251c, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &5889654199905911718
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: RangeAttack
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 2407164190980322354}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: bd1466bb066f47a42b39245517283d9e, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &6710355430517019312
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInvincibility
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isMelee
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isRangeAttack
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isSpecialLazerFire
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isArmorBuff
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -2186859016606710971}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.7
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &7280760791079481889
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Invincibility
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -7751348064235546682}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: d75b216e92639fd4cb460e663cc6de02, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
